# trapcam_mesh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults  setup_components.sh
docs/: ARQUITECTURA_PROYECTO.md
main/: CMakeLists.txt  Kconfig.projbuild  local_control.c  main.c
main/leaf_node/: leaf_node.c
main/root_node/: root_node.c
